# cadim

./: .gitignore  CLAUDE.md  Makefile  README.md
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_pluggy_items.sql
backend/src/: error.rs  lib.rs  main.rs  state.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/bff/: bootstrap.rs  credit_cards.rs  dashboard.rs  investments.rs  mod.rs  projections.rs  types.rs
backend/src/db/: compensation.rs  crypto.rs  mod.rs  pluggy_items.rs  positions.rs  users.rs
backend/src/domain/: investments.rs  mod.rs  portfolio.rs  projections.rs  spending.rs  taxes.rs
backend/src/pluggy/: client.rs  types.rs
backend/src/routes/: accounts.rs  auth.rs  compensation.rs  connect_token.rs  credit_cards.rs  health.rs  investments.rs  items.rs  mod.rs  pluggy_items.rs  positions.rs  rates.rs  types.rs
backend/tests/: accounts.rs  common.rs  connect_token.rs  credit_cards.rs  health.rs  investments.rs  items.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/mockups/: settings-sheet-options.html
frontend/src/: App.css  App.integration.test.tsx  App.tsx  index.css
frontend/src/components/: CreditCardsPage.tsx  DashboardPage.integration.test.tsx  DashboardPage.tsx  DebugPanel.tsx  Header.tsx  InvestmentsPage.integration.test.tsx  InvestmentsPage.tsx  Logo.tsx  ProjectionsPage.tsx  Sidebar.tsx
frontend/src/constants/: investments.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  billing-cycles.test.ts  billing-cycles.ts  clt-taxes.test.ts  (+9 more)
(+11 files in other folders)
