[package]
name = "cadim-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
