[package]
name = "cadim-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"

[dev-dependencies]
axum-test = "19"
wiremock = "0.6"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
